Fixing codeblock overflow

--- a/sass/code.scss
+++ b/sass/code.scss
@@ -51,6 +51,7 @@ pre[style] code {
     font-size: 1rem;
     word-spacing: normal;
     white-space: pre-wrap;
+    overflow-wrap: break-word;
 }
 
 pre[data-lang=python] code::before {
